ajax requests use correct urls and CSRF protection

--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -15,10 +15,10 @@
 
 // states
 .stateful .state { display: none; }
-.untouched .state.content_default { display: inline; }
-.sending .state.content_sending { display: inline; }
-.generating .state.content_generating { display: inline; }
-.retrieving .state.content_retrieving { display: inline; }
+.stateful.default .state.content_default { display: inline; }
+.stateful.sending .state.content_sending { display: inline; }
+.stateful.generating .state.content_generating { display: inline; }
+.stateful.retrieving .state.content_retrieving { display: inline; }
 
 .btn .glyphicon {
   margin-right: .5em;
