--- a/typeseam/templates/base.html
+++ b/typeseam/templates/base.html
@@ -10,6 +10,10 @@
 
     {% block main %}{% block content %}{% endblock %}{% endblock %}
     {% endblock body %}
+    <script>
+    {% block js_variables %}
+    {% endblock js_variables %}
+    </script>
     <script src="/static/js/main.js"></script>
   </body>
 </html>
