--- a/typeseam/templates/responses.html
+++ b/typeseam/templates/responses.html
@@ -19,6 +19,7 @@
         </thead>
 
         <tbody class="responses">
+{% include "response_list.html" %}
 {% for response in responses %}
 {% include "response_listing.html" %}
 {% endfor %}
@@ -29,3 +30,9 @@
     {% endblock main %}
     </div> <!-- end container -->
 {% endblock body %}
+
+{% block js_variables %}
+  var API_ENDPOINTS = {
+    new_responses: "{{ url_for('form_filler.remote_responses', typeform_key=form.form_key) }}",
+  };
+{% endblock js_variables %}
